--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -3,4 +3,5 @@
   %p= "Hi #{current_user.first_name}"
   = link_to 'Logout', logout_path
 - else
-  = link_to 'Login', login_path, method: "delete"
+  = link_to 'Login', login_path
+  = link_to 'Signup', signup_path
