--- a/app/assets/stylesheets/shared/header.sass
+++ b/app/assets/stylesheets/shared/header.sass
@@ -1,3 +1,17 @@
 .header
+  display: flex
+  align-items: center
+  padding: 20px
+
   h1 
-  color: red
+    letter-spacing: 2px
+    font-weight: lighter
+    flex-grow: 1
+  
+  a 
+    font-size: 20px
+    color: black
+    margin: 20px
+    &:hover
+      color: #5D38DB
+
