--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     %title FlightBooker
     = csrf_meta_tags
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': true
-    = stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Cabin+Sketch|Roboto:300,400'
+    = stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Work+Sans:200,300,400,600,700'
     = javascript_include_tag 'application', 'data-turbolinks-track': true
 
   %body
