--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -1,8 +1,9 @@
 .header
-  %h1 HEADER
-  - if current_user
-    %p= "Hi #{current_user.first_name}"
-    = link_to 'Logout', logout_path
-  - else
-    = link_to 'Login', login_path
-    = link_to 'Signup', signup_path
+  %h1 LOLIDAY PLANNER
+  .header-links-position
+    - if current_user
+      %p= "Hi #{current_user.first_name}"
+      = link_to 'Logout', logout_path
+    - else
+      = link_to 'Signup', signup_path
+      = link_to 'Login', login_path
