added background image to homepage

--- a/app/assets/stylesheets/main.sass
+++ b/app/assets/stylesheets/main.sass
@@ -1,5 +1,7 @@
 @import "shared/header.sass"
-@import "base/core.css"
+@import "base/core.sass"
+@import "styles/home.sass"
 
 body
   font-family: 'Work Sans', sans-serif
+  margin: 0
