--- a/app/assets/stylesheets/styles/home.sass
+++ b/app/assets/stylesheets/styles/home.sass
@@ -2,3 +2,16 @@
   width: 100%
   height: 100vh
   background-image: image-url("homepage_background_pattern.png")
+
+
+.home-container-hero
+  background-color: white
+  margin: 0 auto
+  width: 50%
+
+  h2
+    font-size: 26px
+    font-weight: normal
+  h4 
+    font-size: 20px
+    font-weight: lighter
