--- a/app/assets/stylesheets/styles/home.sass
+++ b/app/assets/stylesheets/styles/home.sass
@@ -2,11 +2,14 @@
   width: 100%
   height: 100vh
   background-image: image-url("homepage_background_pattern.png")
-
+  padding: 100px 0 0 0
+  margin: -1px auto 0 auto
 
 .home-container-hero
-  background-color: white
   margin: 0 auto
+  padding: 80px
+  text-align: center
+  background-color: white
   width: 50%
 
   h2
@@ -15,3 +18,14 @@
   h4 
     font-size: 20px
     font-weight: lighter
+    width: 60%
+    margin: 0 auto
+    padding: 30px
+  
+  a
+    color: #9B9B9B
+    &:hover
+      color: darken(#9B9B9B, 20%)
+
+.button-hpheader-position
+  margin: 30px
