--- a/app/views/pages/home.html.haml
+++ b/app/views/pages/home.html.haml
@@ -1,6 +1,6 @@
 .home-container-background
   .home-container-hero
     %h2 Say goodbye to spreadsheets 👋
-    %h4 Suggest and vote for your favourite holidays so you and your friends can live a happy, life.
+    %h4 Suggest and vote for your favourite holidays so you and your friends can live a happy life.
     = button_to "Sign Up", signup_url, :method => :get, class: 'button-main button-hpheader-position'
     = link_to "Already signed up? Log in here", login_url
