fixed nav layout and routes

--- a/app/assets/stylesheets/shared/header.sass
+++ b/app/assets/stylesheets/shared/header.sass
@@ -15,3 +15,13 @@
     &:hover
       color: #5D38DB
 
+#header-title 
+  text-decoration: none
+  font-size: 30px
+
+.header-links-position
+  display: flex
+  align-items: center
+
+  p 
+    font-size: 20px
