--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -5,5 +5,5 @@
       %p= "Hi #{current_user.first_name} 👋"
       = link_to 'Logout', logout_path
     - else
-      = link_to 'Signup', signup_path
-      = link_to 'Login', login_path
+      = link_to 'Signup', signup_path, :id => "signup"
+      = link_to 'Login', login_path, :id => "login"
