styled the table and added reset

--- a/app/assets/stylesheets/styles/holidays.sass
+++ b/app/assets/stylesheets/styles/holidays.sass
@@ -9,5 +9,20 @@
 
 .holidays-table
   margin: 0 auto
-  width: 60%
+  width: 90%
   padding: 50px
+
+  tr 
+    margin-bottom: 10px
+
+  th, td
+    text-align: left
+    font-weight: lighter
+
+  th
+    font-size: 26px
+    padding: 10px
+  
+  td 
+    font-size: 20px
+    padding: 5px
