--- a/app/views/holidays/_form.html.haml
+++ b/app/views/holidays/_form.html.haml
@@ -11,7 +11,7 @@
     = form.label :location
     = form.text_field :location, id: :holiday_location
   .field
-    = form.label :description
+    = form.label "Why go here?"
     = form.text_area :description, id: :holiday_description
   .field
     = form.label :flight_price
