fixed hp and nav styling

--- a/app/assets/stylesheets/shared/header.sass
+++ b/app/assets/stylesheets/shared/header.sass
@@ -24,6 +24,7 @@ $primary-color: #5D38DB
 .header-links-position
   display: flex
   align-items: center
+  font-weight: lighter
 
   p 
     font-size: 20px
