--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -1,7 +1,7 @@
 !!! 5
 %html
   %head
-    %title FlightBooker
+    %title Loliday Planner
     = csrf_meta_tags
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': true
     = stylesheet_link_tag 'https://fonts.googleapis.com/css?family=Work+Sans:200,300,400,600,700'
