--- a/app/views/shared/_header.html.haml
+++ b/app/views/shared/_header.html.haml
@@ -2,7 +2,7 @@
   %h1= link_to "LOLIDAY PLANNER", root_path, :id => "header-title"
   .header-links-position
     - if current_user
-      %p= "Hi #{current_user.first_name} 👋"
+      %p= "Hi #{current_user.first_name.capitalize} 👋"
       = link_to 'Logout', logout_path
     - else
       = link_to 'Signup', signup_path, :id => "signup"
