fixed styling of table

--- a/app/assets/stylesheets/styles/holidays.sass
+++ b/app/assets/stylesheets/styles/holidays.sass
@@ -1,16 +1,14 @@
 .holidays-container
   margin: 0 auto
-  width: 60%
+  width: 80%
 
 .holidays-container-header
   display: flex
-  align-items: center
-  justify-content: space-between
+  justify-content: flex-end
+  margin: 50px 0 50px 0
 
 .holidays-table
   margin: 0 auto
-  width: 90%
-  padding: 50px
 
   tr 
     margin-bottom: 10px
@@ -25,4 +23,4 @@
   
   td 
     font-size: 20px
-    padding: 5px
+    padding: 10px
