--- a/app/assets/stylesheets/base/core.sass
+++ b/app/assets/stylesheets/base/core.sass
@@ -17,3 +17,17 @@ a
 
   &:hover
     background-color: lighten($primary-color, 10%)
+  
+.alert-error 
+  background-color: #f2dede
+  border-color: #eed3d7
+  color: #b94a48
+  text-align: left
+ 
+.alert-success 
+    background-color: #dff0d8
+    border-color: #d6e9c6
+    color: #468847
+    text-align: left
+ 
+
