--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -9,4 +9,7 @@
 
   %body
     = render "shared/header"
+    - flash.each do |key, value|
+      %div{class: "alert alert-#{key}"}
+        %p= "#{value}"
     = yield
