--- a/app/assets/stylesheets/styles/holidays.sass
+++ b/app/assets/stylesheets/styles/holidays.sass
@@ -4,23 +4,35 @@
 
 .holidays-container-header
   display: flex
-  justify-content: flex-end
+  justify-content: space-between
   margin: 50px 0 50px 0
 
 .holidays-table
   margin: 0 auto
+  box-shadow: 11px 13px 43px 0px rgba(136,136,252,0.54)
+  padding: 50px
+
+  thead
+    border-bottom: 1px solid #4D3DF7
 
   tr 
     margin-bottom: 10px
 
-  th, td
-    text-align: left
-    font-weight: lighter
-
   th
     font-size: 26px
-    padding: 10px
+    font-weight: normal
+    padding: 20px
+    text-align: left
   
   td 
     font-size: 20px
-    padding: 10px
+    font-weight: lighter
+    padding: 25px
+    border-bottom: 1px solid #D9E2EC
+
+    a
+      outline: none
+      text-decoration: none
+
+  #table-ranking, #table-title
+    font-weight: normal
