--- a/app/views/holidays/index.html.haml
+++ b/app/views/holidays/index.html.haml
@@ -2,6 +2,7 @@
 
 .holidays-container
   .holidays-container-header
+    %h1 Summer 2019 Leaderboard
     = button_to "Add holiday", new_holiday_path, :method => :get, class: 'button-main'
 
   .holidays-table
@@ -11,24 +12,24 @@
           %th 
           %th 
           %th Why go here?
-          %th Flight price
-          %th Added by
+          %th Flights
+          %th Suggester
           %th Votes
           %th 
         %tbody
           - @holidays.each_with_index do |holiday, i|
             %tr
-              %td= i + 1  
-              %td= holiday.location
+              %td#table-ranking= i + 1  
+              %td#table-title= holiday.location
               %td= holiday.description
               %td= "£ #{holiday.flight_price}"
               %td= holiday.creator.first_name
               %td= holiday.votes.count 
               %td
                 - if current_user.id == holiday.creator.id
-                  = link_to 'Edit', edit_holiday_path(holiday)
+                  = link_to 'Edit', edit_holiday_path(holiday), class: 'button-neutral'
                 - else
-                  = link_to 'Vote', votes_path(voter_id: current_user.id, holiday_id: holiday.id), method: 'post'
+                  = link_to 'Vote', votes_path(voter_id: current_user.id, holiday_id: holiday.id), method: 'post', class: 'button-secondary'
 
 
 
