--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,8 +1,8 @@
-.container-signup-position
+.form-container-position
   =image_tag("user_login_graphic.png")
   %h1 Create account
 
-  .form-signup-position
+  .form-position
     =form_for @user do |f|
       =f.label :first_name
       =f.text_field :first_name,  :placeholder => "Cliff"
