--- a/app/assets/stylesheets/base/core.sass
+++ b/app/assets/stylesheets/base/core.sass
@@ -37,15 +37,18 @@ a
     background-color: lighten($neutral-color, 5%)
   
 .alert-error 
-  background-color: #f2dede
+  background-color: red
   border-color: #eed3d7
-  color: #b94a48
   text-align: left
+
+  p
+    color: red
  
 .alert-success 
     background-color: #dff0d8
     border-color: #d6e9c6
     color: #468847
     text-align: left
- 
 
+.hidden
+  display: none
